--- a/style.css
+++ b/style.css
@@ -1,3 +1,20 @@
+*{
+font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif
+}
+
+body{
+background-color: chocolate;
+color: blanchedalmond;
+}
+
+p{
+text-align: center;
+}
+
+.img1{
+ margin: auto;
+}
+
 h1{
 text-align: center;
 }
